[package]
name = "swarmin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6", features = ["serde"] }
ndarray-rand = "0.14.0"
rand = "0.8.5"
serde_json = "1.0"
serde = "1.0"
criterion = "0.5.1"

[dev-dependencies]
plotters = "0.3.5"
approx = "0.3.2"

[lib]
name = "swarmin"

[[bench]]
name = "benchmark"
harness = false

[[example]]
name = "plots"